--- a/SanteDB.Core.Model/SanteDB.Core.Model.nuspec
+++ b/SanteDB.Core.Model/SanteDB.Core.Model.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>$version$</version>
+    <version>1.1.0</version>
     <title>$title$</title>
     <authors>Mohawk College of Applied Arts and Technology</authors>
     <owners>Mohawk College of Applied Arts and Technology</owners>
@@ -15,7 +15,7 @@
     <copyright>Copyright 2018, Mohawk College of Applied Arts and Technology</copyright>
     <tags>CDR SanteDB</tags>
     <dependencies>
-      <dependency id="Newtonsoft.Json" version="9.0.0.0"/>
+      <dependency id="Newtonsoft.Json" version="11.0.2.0"/>
     </dependencies>
   </metadata>
 </package>
