--- a/SanteDB.Core.Model/SanteDB.Core.Model.csproj
+++ b/SanteDB.Core.Model/SanteDB.Core.Model.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Patch\PatchOperationType.cs" />
     <Compile Include="Patch\PatchTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\IFilterFunction.cs" />
     <Compile Include="Query\NameValueCollection.cs" />
     <Compile Include="Query\QueryExpressionBuilder.cs" />
     <Compile Include="Query\QueryExpressionParser.cs" />
@@ -211,7 +212,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2"></PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2">
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
