--- a/SanteDB.Core.Model/SanteDB.Core.Model.csproj
+++ b/SanteDB.Core.Model/SanteDB.Core.Model.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Constants\ActParticipationKey.cs" />
     <Compile Include="Constants\ActReasonKeys.cs" />
     <Compile Include="Constants\ActRelationshipTypeKeys.cs" />
+    <Compile Include="Constants\AssigningAuthorityKeys.cs" />
     <Compile Include="Constants\IndustryTypeKeys.cs" />
     <Compile Include="Constants\ObservationTypeKeys.cs" />
     <Compile Include="Constants\AddressKeys.cs" />
@@ -135,6 +136,7 @@
     <Compile Include="Export\Dataset.cs" />
     <Compile Include="Extensions\BinaryExtensionHandler.cs" />
     <Compile Include="Extensions\BooleanExtensionHandler.cs" />
+    <Compile Include="Extensions\UuidExtensionHandler.cs" />
     <Compile Include="Extensions\DateExtensionHandler.cs" />
     <Compile Include="Extensions\DecimalExtensionHandler.cs" />
     <Compile Include="Extensions\DictionaryExtensionHandler.cs" />
