Refactored out SVC Core so that the implementation can be more consistent between DCG , DC, DS and other services

--- a/SanteDB.Core.Model/SanteDB.Core.Model.csproj
+++ b/SanteDB.Core.Model/SanteDB.Core.Model.csproj
@@ -60,6 +60,19 @@
     <Compile Include="Attributes\QueryParameterAttribute.cs" />
     <Compile Include="Attributes\SerializationReferenceAttribute.cs" />
     <Compile Include="Attributes\SimpleValueAttribute.cs" />
+    <Compile Include="Audit\ActionType.cs" />
+    <Compile Include="Audit\AuditableObejctType.cs" />
+    <Compile Include="Audit\AuditableObject.cs" />
+    <Compile Include="Audit\AuditableObjectIdType.cs" />
+    <Compile Include="Audit\AuditableObjectLifecycle.cs" />
+    <Compile Include="Audit\AuditableObjectRole.cs" />
+    <Compile Include="Audit\AuditActorData.cs" />
+    <Compile Include="Audit\AuditCode.cs" />
+    <Compile Include="Audit\AuditData.cs" />
+    <Compile Include="Audit\AuditMetadata.cs" />
+    <Compile Include="Audit\AuditSourceType.cs" />
+    <Compile Include="Audit\NetworkAccessPointType.cs" />
+    <Compile Include="Audit\OutcomeIndicator.cs" />
     <Compile Include="BaseEntityData.cs" />
     <Compile Include="Association.cs" />
     <Compile Include="Collection\Bundle.cs" />
