--- a/SanteDB.Core.Model/SanteDB.Core.Model.csproj
+++ b/SanteDB.Core.Model/SanteDB.Core.Model.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Patch\PatchTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\IQueryFilterExtension.cs" />
+    <Compile Include="Query\ModelSort.cs" />
     <Compile Include="Query\NameValueCollection.cs" />
     <Compile Include="Query\QueryExpressionBuilder.cs" />
     <Compile Include="Query\QueryExpressionParser.cs" />
