--- a/SanteDB.Core.Model/SanteDB.Core.Model.nuspec
+++ b/SanteDB.Core.Model/SanteDB.Core.Model.nuspec
@@ -7,8 +7,8 @@
     <authors>Mohawk College of Applied Arts and Technology</authors>
     <owners>Mohawk College of Applied Arts and Technology</owners>
     <licenseUrl>https://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
-    <projectUrl>http://santedb.org</projectUrl>
-    <iconUrl>http://santedb.org/img/logo.png</iconUrl>
+    <projectUrl>http://santesuite.org</projectUrl>
+    <iconUrl>http://santesuite.org/assets/img/logo.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>The SanteDB core model represents the business object model for the SanteDB CDR</description>
     <releaseNotes>Initial Version</releaseNotes>
