--- a/SanteDB.Core.Model/SanteDB.Core.Model.nuspec
+++ b/SanteDB.Core.Model/SanteDB.Core.Model.nuspec
@@ -2,10 +2,10 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>1.40.0.0</version>
+    <version>1.41.0.0</version>
     <title>$title$</title>
-    <authors>Mohawk College of Applied Arts and Technology</authors>
-    <owners>Mohawk College of Applied Arts and Technology</owners>
+    <authors>Mohawk College of Applied Arts and Technology &amp; Fyfe Software Inc.</authors>
+    <owners>Mohawk College of Applied Arts and Technology &amp; Fyfe Software Inc.</owners>
     <licenseUrl>https://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <projectUrl>http://santesuite.org</projectUrl>
     <iconUrl>http://santesuite.org/assets/img/logo.png</iconUrl>
