Added telecommunications type to the telecom addr

--- a/SanteDB.Core.Model/SanteDB.Core.Model.csproj
+++ b/SanteDB.Core.Model/SanteDB.Core.Model.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Constants\NullReasonKeys.cs" />
     <Compile Include="Constants\PhoneticAlgorithmKeys.cs" />
     <Compile Include="Constants\StatusConceptKeys.cs" />
+    <Compile Include="Constants\TelecomAddressTypeKeys.cs" />
     <Compile Include="Constants\TelecomAddressUseKeys.cs" />
     <Compile Include="Constants\UserClassKeys.cs" />
     <Compile Include="DataTypes\AssigningAuthority.cs" />
