Added security challenge structure to load challenge questions from the database

--- a/SanteDB.Core.Model/SanteDB.Core.Model.csproj
+++ b/SanteDB.Core.Model/SanteDB.Core.Model.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Roles\Patient.cs" />
     <Compile Include="Roles\Provider.cs" />
     <Compile Include="Security\SecurityApplication.cs" />
+    <Compile Include="Security\SecurityChallenge.cs" />
     <Compile Include="Security\SecurityDevice.cs" />
     <Compile Include="Security\SecurityEntity.cs" />
     <Compile Include="Security\SecurityPolicy.cs" />
