--- a/SanteDB.Core.Model/SanteDB.Core.Model.csproj
+++ b/SanteDB.Core.Model/SanteDB.Core.Model.csproj
@@ -24,7 +24,7 @@
   <PropertyGroup>
     <PackageId>SanteDB.Core.Model</PackageId>
     <Title>SanteDB.Core.Model</Title>
-    <Version>2.1.3</Version>
+    <Version>$(VersionNumber)</Version>
     <Description>SanteDB Clinical Data Repository (CDR) core business models</Description>
     <Authors>SanteSuite Contributors</Authors>
     <PackageTags>SanteDB</PackageTags>
